add arrow bottom and  animation

--- a/index.html
+++ b/index.html
@@ -52,6 +52,25 @@
           </nav>
 
     </header> <!--/Header-->
+
+    <section class="offer">
+        <div class="container">
+            <h1 class="title">
+                Best of its kind!
+            </h1>
+            <p>
+                Fast learner<br>
+                I can make mistakes<br>
+                bring everything to the end!
+            </p>
+            <button class="main-btn" type="button">MAKE SURE</button>
+        </div> <!--/container-->
+        <div class="arrow-bottom">
+            <a href="#">
+                <img src="assets/img/arrow-btm.png" alt="arrow-bottom">
+            </a>
+        </div>
+    </section>
     
 
     <script src="assets/js/jquery.min.js"></script>
