--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/favicon/favicon.ico">
+    <link rel="icon" href="assets/favicon/fav.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="style.css">
@@ -164,9 +164,41 @@
             </div><!--/row-->
 
             <img src="assets/img/photo.png" alt="photo" class="photo">
-            
+
         </div><!--/container-->
     </section><!--/feedback-->
+
+    <section class="travel">
+        <div class="container">
+            <h2 class="block-title">My travel</h2>
+
+            <div class="slider">
+
+                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/img/gallery/5.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/gallery/6.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/gallery/7.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                        <img src="assets/img/arrow-btm.png" alt="arrow-botton">
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                        <img src="assets/img/arrow-btm.png" alt="arrow-botton">
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                
+            </div><!--/slider-->
+        </div><!--/container-->
+    </section><!--/travel-->
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
