--- a/index.html
+++ b/index.html
@@ -299,6 +299,29 @@
     </section>
     <!--/faq-->
 
+    <section class="contact">
+        <div class="container">
+            <h2 class="block-title white">Contact us</h2>
+            <form class="form">
+                <p>
+
+                </p>
+                <div class="row">
+                    <div class="col-lg4">
+                        <input type="text" placeholder="Name" class="input">
+                        <input type="text" placeholder="Phone number" class="input">
+                        <input type="text" placeholder="Mail" class="input">
+                    </div>
+                    <div class="col-lg4">
+                        <textarea placeholder="Your massege" class="input textare"></textarea>
+                    </div>
+
+                </div><!--/row-->
+                <button class="main-btn white" type="submit">SEND</button>
+            </form>
+        </div><!--/container-->
+    </section><!--/contact-->
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery.fancybox.min.js"></script>
