add scss blocks & my works

--- a/index.html
+++ b/index.html
@@ -127,9 +127,6 @@
                             <a href="#">Резюме</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">Что изучаю</a>
-                        </li>
-                        <li class="nav-item">
                             <a href="#">Контакты</a>
                         </li>
 
@@ -171,6 +168,13 @@
         <!--/arrow-bottom-->
     </section>
     <!--/sction offer-->
+    <section class="works">
+        <div class="container">
+            <h2 class="block-title">Мои работы</h2>
+        </div>
+        <!--/container-->
+    </section>
+    <!--/sction works-->
 
     <section class="travel">
         <div class="container">
@@ -246,7 +250,7 @@
             <h2 class="block-title">Резюме</h2>
 
             <div class="text-center">
-                <a class="btn btn--thin"href="#">Download pdf</a>
+                <a class="btn btn--thin"href="#">Download CV</a>
             </div>
 
             <div class="timeline">
@@ -441,10 +445,6 @@
                 </div><!--/timeline__col--right-->
 
             </div><!--/Timeline-->
-
-            <div class="text-center">
-                <a class="btn" href="#" data-modal="#modal_hire_me">Hire me</a>
-            </div>
 
         </div>
         <!--/container-->
