--- a/index.html
+++ b/index.html
@@ -171,6 +171,37 @@
     <section class="works">
         <div class="container">
             <h2 class="block-title">Мои работы</h2>
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="works-wrap">
+                        <a href="http://18.doroshuk.online" target="blank">
+                            <img src="assets/img/work18.jpg" alt="work-img">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="works-wrap">
+                        <a href="http://13.doroshuk.online" target="blank">
+                            <img src="assets/img/work13.jpg" alt="work-img">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="works-wrap">
+                        <a href="http://t-shirtart.shop" target="blank">
+                            <img src="assets/img/tshirtart.jpg" alt="work-img">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="works-wrap">
+                        <a href="http://19.doroshuk.online" target="blank">
+                            <img src="assets/img/work19.jpg" alt="work-img">
+                        </a>
+                    </div>
+                </div>
+                
+            </div>
         </div>
         <!--/container-->
     </section>
